# SDR_RDMA_UDP

./: .gitmodules  README.md  build  rdma-info.sh  rdma-install.sh  results.csv
UDP-v2/ec-xor-udp/: README.md
UDP-v2/ec-xor-udp-fallback/: Dockerfile  Makefile  README.md
UDP-v2/ec-xor-udp-fallback/include/: udp_socket.h  utils.h  xor_ec.h
UDP-v2/ec-xor-udp-fallback/src/: ec_receiver.cpp  ec_sender.cpp  xor_ec.cpp
UDP-v2/ec-xor-udp-mds/: Dockerfile  Makefile  README.md
UDP-v2/ec-xor-udp-mds/include/: mds_ec.h  udp_socket.h  utils.h
UDP-v2/ec-xor-udp-mds/src/: ec_receiver.cpp  ec_sender.cpp  mds_ec.cpp  udp_socket.cpp
UDP-v2/ec-xor-udp/include/: utils.h
UDP-v2/ec-xor-udp/src/: ec_receiver.cpp  ec_sender.cpp  udp_socket.cpp  xor_ec.cpp
UDP-v2/sr-udp/: Dockerfile  Makefile  README.md
UDP-v2/sr-udp/src/: main.cpp  sr_protocol.cpp  udp_transport.cpp
UDP/EC_POC/: CMakeLists.txt  Makefile  README.md
UDP/EC_POC/examples/: simple_receiver.cpp  simple_sender.cpp  test_with_loss.cpp
UDP/EC_POC/include/: erasure_code.h
UDP/EC_POC/src/: packet.cpp  reed_solomon.cpp  udp_receiver.cpp  udp_sender.cpp  utils.cpp
UDP/basic_udp/: client.c  server.c
UDP/super_basic_udp/: client.c  server.c  udp_server
docs/: PLAN.md
scripts/: bw_lat.sh  rdma-info.sh  rdma-install.sh  run_bench.py
sdr-sr-udp/: SDR_SR_Implementation.md
sdr-sr-udp/Linux/: config.ini
sdr-sr-udp/Linux/scripts/: rdma-install.sh
sdr-sr-udp/Linux/sdr-udp/: CMakeLists.txt  README.md
sdr-sr-udp/Linux/sdr-udp/examples/: sdr_test_message_id.cpp
sdr-sr-udp/Linux/sdr-udp/include/: message_allocator.h  sdr_api.h  sdr_connection.h  sdr_frontend.h  sdr_packet.h  tcp_control.h
sdr-sr-udp/Linux/sdr-udp/src/: config_parser.cpp  sdr_api.cpp  tcp_control.cpp
sdr-sr-udp/Windows/scripts/: rdma-info.sh
sdr-sr-udp/Windows/sdr-udp/examples/: sdr_sr_receiver.cpp  sdr_sr_sender.cpp  sdr_test_receiver.cpp
sdr-sr-udp/Windows/sdr-udp/include/: sdr_backend.h
sdr-sr-udp/Windows/sdr-udp/src/: sdr_api.cpp
sdr-sr-udp/docs/: IMPLEMENTATION_GUIDE.md
sdr-sr-udp/sdr-udp/include/: sdr_api.h  sdr_connection.h
sdr-udp/: CMakeLists.txt  README.md
sdr-udp/config/: receiver.config  sender.config
sdr-udp/data/: baseline_Data.csv  ec_Data.csv  sr_Data.csv
sdr-udp/examples/: sdr_test_receiver.cpp  sdr_test_sender.cpp
sdr-udp/include/: config_parser.h  sdr_api.h  sdr_backend.h  sdr_connection.h  sdr_packet.h  sdr_pipeline.h  sdr_receiver.h  tcp_control.h
sdr-udp/reliability/: ec.cpp  ec.h  sr.cpp  sr.h
sdr-udp/scripts/: baseline_plot_throughput_ratio_table.py  baseline_plot_throughput_vs_loss.py  baseline_plot_throughput_vs_size.py  ec_plot_throughput_ratio_table.py  ec_plot_throughput_vs_loss.py  ec_plot_throughput_vs_size.py  sr_plot_throughput_ratio_table.py  sr_plot_throughput_vs_loss.py  sr_plot_throughput_vs_size.py
sdr-udp/src/: sdr_api.cpp  sdr_pipeline.cpp  tcp_control.cpp
